<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/config_desc_text"
            android:id="@+id/desc_text"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dip">

        <EditText
                android:id="@+id/zip_field"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/config_search_hint"
                style="@style/InputText">
        </EditText>

        <Button
                android:id="@+id/set_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_button_text">
        </Button>

    </LinearLayout>

</LinearLayout>