<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dip">

        <TextView
                android:id="@+id/detailDate"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dip"
                android:layout_gravity="center"
                style="@style/DateTitle"/>

    </LinearLayout>

    <GridLayout
            android:id="@+id/weatherData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="2"
            android:padding="10dip">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:paddingTop="10dip"
                style="@style/ListHeader"/>

        <TextView
                android:id="@+id/detailDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/WeatherResults"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempLow_label"
                android:paddingTop="10dip"
                style="@style/ListHeader"/>

        <TextView
                android:id="@+id/low_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                style="@style/WeatherResults"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempHi_label"
                android:paddingTop="10dip"
                style="@style/ListHeader"/>

        <TextView
                android:id="@+id/hi_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                style="@style/WeatherResults"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed_label"
                android:paddingTop="10dip"
                style="@style/ListHeader"/>

        <TextView
                android:id="@+id/wind_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                style="@style/WeatherResults"/>

    </GridLayout>

</LinearLayout>